# winfex

./: README.md  index.html  package.json
src/: app.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/file_system/: drive.rs  mod.rs
src/components/: drive.svelte  progress-bar.svelte  record.svelte
src/components/material-icons/: file.svelte  folder.svelte  question-mark.svelte  storage.svelte
src/store/: directory.ts
src/types/: directory-record.d.ts  drive-details.d.ts
