[package]
name = "winfex"
version = "0.0.0"
description = "Windows File Explorer Extended"
authors = ["c1m50c <https://github.com/c1m50c>"]
repository = "https://github.com/c1m50c/winfex"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
sysinfo = { version = "0.29.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
